# MintedWithLovelace

./: CNAME  README.md  dco_ownership.html  dco_whitelist_only.html  index.html  newhomepage.html  tests.txt
assets/: Readme.md  dcostats.js
campaigns/: addr_test1qpwqz542nu26zxnyzrhd5d3w6f9dtk27jjxmjkxfrma0q9j9uap0rq4t2709dqju27za2nqpg928kcl8edgp3hmvtslqq7kr40.json
dapp/: How-To-Use-Minted.md  LICENSE  README.md  cardano.py  config.py  main.py
dapp-smartcontracts/global-registry/: README.md  registry.cabal  royaltyregistry.cabal
dapp-smartcontracts/global-registry/app/: registry.hs  royaltyregistry.hs
dapp-smartcontracts/global-registry/src/: Registry.hs  RoyaltyRegistry.hs
dapp/add-ons/: README.md
dapp/helper-tools/: Readme.md  setupMainnetCardanoNode.sh  setupMainnetNode.sh  setupTestnetCardanoNode.sh
dapp/minting-src/: template.html  template.script  template_ipfsIMG.json  template_onchainSVGHTML.json
dapp/refinery/: README.md  sha256sums.txt
dapp/releases/: README.md
dapp/resources/helpers/: Readme.md  prepSetup.sh  setupMainNode.sh  setupMainnetCardanoNode.sh  setupNode.sh  setupTestNode.sh
dapp/smartcontract-src/: swaptoken.cabal
dapp/smartcontract-src/app/: swaptoken.hs
dapp/smartcontract-src/src/: template_SwapToken.hs
dapp/utilities/: README.md  remove_jsonObjs.py  rename.py  rename_replace.py
dco/: voting.minted
